--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 
 	<body>
 		<div ng-controller="mainController">
-			<point-motion-car-list cars='cars'></point-motion-car-list>
+			<point-motion-car-list cars='cars'>test</point-motion-car-list>
 		</div>
 
 
