Fixed menu overflow

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,8 @@
 		<script type="text/javascript" src="js/angular-leap.min.js"></script>
 		<script type="text/javascript" src="js/leap.min.js"></script>
 
+		<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
+
 		<title>PointMotion</title>
 	</head>
 	<body>
@@ -36,27 +38,3 @@
 		</div>
 	</body>
 </html>
-
-<!--<!doctype html>
-<html ng-app="pointMotion">
-
-	<head>
-		<title>PointMotion</title>
-	</head>
-
-	<body>
-		<div ng-controller="mainController">
-			<point-motion-car-list cars='cars'>test</point-motion-car-list>
-		</div>
-
-
-	</body>
-
-
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
-	
-	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/angular-leap.min.js"></script>
-	<script type="text/javascript" src="js/leap.min.js"></script>
-</html>-->
